2014-05-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_label) Declared static.
	(scan_reference_target): Argument added.  Declared static.
	[preprocess-nodes=On]: Add space before output "(" if not at
	start of line.  Hide full stop terminating reference if it
	looks like (*note Label:(file)node.)  Caller updated.
	(safe_string_index): Utility function.
	(avoid_see_see): New function.
	(scan_node_contents): Call avoid_see_see.

2014-05-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_parse_node): Don't include terminating
	character in returned length.
	(scan_reference_target): [preprocess-nodes=On] Hide terminating
	'.' in a menu entry.
	* info/search.c: (find_node_in_binding): Don't view '.' as terminating
	character in nodeline.
	* info/session.c (dump_node_to_stream): Use PARSE_NODE_VERBATIM
	as argument to info_get_node.
	* info/t/file-node-with-dot.sh: New test.
	* info/t/file-node: Comment updated.

2014-05-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.c (add_initial_nodes): Discard dir entry from initial
	node list if --node was used.

	* info/session.c (info_move_to_xref): Remove set of W_UpdateWindow.
	This was causing some screen flicker.
	* info/infodoc.c (info_get_help_window): Remove unnecessary set of
	W_UpdateWindow.

	* info/session.c (quit_info_immediately): Declared static.

2014-05-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_target) <preprocess-nodes=On>:
	Deal with newline following colon in cross-reference better.
	(info_copy_references, copy_converting): Comments added.
	* info/info.c (get_initial_file): Call info_copy_reference on
	REFERENCE retrieved from dir.

2014-05-11  Patrice Dumas  <pertusus@free.fr>

	* Texinfo/Parser.pm, Texinfo/Structuring.pm(warn_non_empty_parts),
	t/test_utils.pl, texi2any.pl: warning for @part with text.
	* tp/Texinfo/Convert/DocBook.pm: add <partintro> for non empty